--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Assets\scripts\PlayerLaserBehaviour.cs" />
     <Compile Include="Assets\scripts\PoolGenerator.cs" />
     <Compile Include="Assets\scripts\RailFollower.cs" />
+    <Compile Include="Assets\TurretAi.cs" />
     <Reference Include="Unity.TextMeshPro.Editor">
       <HintPath>F:/Sam/Documents/NotStarFox/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
